--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,9 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
+  <!-- Google Maps && Google Places API -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcqiMZt4H0qvOeGBe84Mh9u4etthUQa5w&libraries=places">
+  </script>
   <div id="root"></div>
   <!--
       This HTML file is a template.
