added meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Meet Your Pares!" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
+  <meta property="og:title" content="Pare | Student Networking Platform" />
+  <meta property="og:description" content="A Student Networking Platform" />
+  <meta property="og:image"
+    content="https://github.com/kevinreber/kevin-reber-portfolio/blob/master/archives/public/images/project%20demos/thumbnails/pare-fs.jpg?raw=true" />
+  <meta property="og:url" content="https://pare-afb7e.web.app/" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
