updated metadata OG

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="Pare | Student Networking Platform" />
   <meta property="og:description" content="A Student Networking Platform" />
   <meta property="og:image"
-    content="https://github.com/kevinreber/kevin-reber-portfolio/blob/master/archives/public/images/project%20demos/thumbnails/pare-fs.jpg?raw=true" />
+    content="https://github.com/kevinreber/pare/blob/master/public/pare-fs-thumbnail.png?raw=true" />
   <meta property="og:url" content="https://pare-afb7e.web.app/" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
